Fix logo size on small display

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ hr.small {
 @media only screen and (max-width: 768px) {
   #logo {
   margin-left: 0px;
+  width:200px;
 }
 }
 .navbar-custom {
